--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 ObservableCollector = "aecdbc30-9f0d-11e8-0949-396c5a157264"
 OpenCL = "08131aa3-fb12-5dee-8b74-c09406e224a2"
 OpenCLPicker = "b4741b20-32dd-11e9-2e44-23e783dd72cb"
