--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+language: julia
+os:
+  - linux
+julia:
+  - 1.2
+
+notifications:
+  email: false
+
 jobs:
   include:
     - stage: "Documentation"
