--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: julia
 os: linux
-  addons:
-    packages:
-      - pocl
+  dist: bionic
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install pocl -y
 
 julia:
   - 1.2
