--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ dist: bionic
 language: julia
 
 before_install:
-  - sudo apt-get -qq update
+  - sudo add-apt-repository ppa:anbe/opencl
+  - sudo apt-get update
   - sudo apt-get install pocl -y
 
 julia:
