--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: linux
 before_install:
   - sudo add-apt-repository ppa:anbe/opencl -y
   - sudo apt-get update
-  - sudo apt-get install pocl -y
+  - sudo apt-get install pocl-1.1-5 -y
 
 julia:
   - 1.2
