--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: julia
-os:
-  - linux
+os: osx
+# before_install:
+#   - sudo add-apt-repository ppa:anbe/opencl -y
+#   - sudo apt-get update
+#   - sudo apt-get install pocl-1.1-5 -y
+
 julia:
   - 1.2
 
@@ -11,7 +15,6 @@ jobs:
   include:
     - stage: "Documentation"
       julia: 1.2
-      os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
                                     Pkg.develop(PackageSpec(path=pwd()));'
