--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: julia
 os: osx
-# before_install:
-#   - sudo add-apt-repository ppa:anbe/opencl -y
-#   - sudo apt-get update
-#   - sudo apt-get install pocl-1.1-5 -y
 
 julia:
   - 1.2
@@ -16,7 +12,11 @@ jobs:
     - stage: "Documentation"
       julia: 1.2
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
-                                    Pkg.develop(PackageSpec(path=pwd()));'
+        - julia --project=docs/ -e 'using Pkg;
+                        Pkg.instantiate();
+                        Pkg.add(PackageSpec(url="https://github.com/skleinbo/OpenCLPicker.jl"));
+                        Pkg.add(PackageSpec(url="https://github.com/skleinbo/ObservableCollector.jl"));
+                        Pkg.add(PackageSpec(url="git@github.com:skleinbo/GrowthDynamics.jl.git"));
+                        Pkg.develop(PackageSpec(path=pwd()));'
         - julia --project=docs/ docs/make.jl
       after_success: skip
