--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
-authors = ["Stephan Kleinbölting <skleinbo@thp.uni-koeln.de"]
 name = "GrowthDynamics"
 uuid = "708a6a61-856c-5d7f-acbf-fcf0902d75eb"
-version = "0.5.2"
+authors = ["Stephan Kleinbölting <skleinbo@thp.uni-koeln.de"]
+version = "0.6.0-pre"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -21,4 +21,4 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1.0"
+julia = "1.3"
