--- a/Project.toml
+++ b/Project.toml
@@ -9,9 +9,8 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
-IndexedTables = "6deec6e2-d858-57c5-ab9b-e6ca5bd20e43"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 ObservableCollector = "aecdbc30-9f0d-11e8-0949-396c5a157264"
