--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "GrowthDynamics"
 uuid = "708a6a61-856c-5d7f-acbf-fcf0902d75eb"
 authors = ["Stephan Kleinbölting <skleinbo@thp.uni-koeln.de"]
-version = "0.6.0-pre"
+version = "0.6.0"
 
 [deps]
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
@@ -23,4 +23,4 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1.3"
+julia = "1.6"
