--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.7.0"
 [deps]
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dictionaries = "85a47980-9c8c-11e8-2b9f-f7ca1fa99fb4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -14,13 +15,24 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
-ObservableCollector = "aecdbc30-9f0d-11e8-0949-396c5a157264"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 julia = "1.6"
+CoordinateTransformations = "0.6.2"
+DataFrames = "1.1.1"
+Dictionaries = "0.3.21"
+Distributions = "0.25.64"
+FileIO = "1.8.2"
+GeometryBasics = "0.3.13"
+Graphs = "1.5.2"
+Interpolations = "0.13.6"
+IterTools = "1.3.0"
+MacroTools = "0.5.9"
+Rotations = "1.2.0"
+StaticArrays = "1.1.3"
+StatsBase = "0.33.18"
