--- a/Project.toml
+++ b/Project.toml
@@ -23,16 +23,16 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 julia = "1.6"
-CoordinateTransformations = "0.6.2"
-DataFrames = "1.1.1"
-Dictionaries = "0.3.21"
-Distributions = "0.25.64"
-FileIO = "1.8.2"
-GeometryBasics = "0.3.13"
-Graphs = "1.5.2"
-Interpolations = "0.13.6"
-IterTools = "1.3.0"
-MacroTools = "0.5.9"
-Rotations = "1.2.0"
-StaticArrays = "1.1.3"
-StatsBase = "0.33.18"
+CoordinateTransformations = "0.6"
+DataFrames = "1.1"
+Dictionaries = "0.3"
+Distributions = "0.25"
+FileIO = "1.8"
+GeometryBasics = "0.3, 0.4"
+Graphs = "1.5"
+Interpolations = "0.13"
+IterTools = "1.3"
+MacroTools = "0.5"
+Rotations = "1.2"
+StaticArrays = "1.1"
+StatsBase = "0.33"
