--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -1,34 +1,24 @@
-- name: Julia TagBot
-  on:
-    issue_comment:
-      types: [created]
-  uses: JuliaRegistries/TagBot@v1
-  with:
-    # Owner/name of the registry repository
-    registry: skleinbo/JuliaRegistry.jl
-    lookback: 28
-    # SSH private key for pushing tags
-    ssh: ${{secrets.DOCUMENTER_KEY}}
-    # Changelog template
-    changelog:
-      {% if previous_release %}
-      [Diff since {{ previous_release }}]({{ compare_url }})
-      {% endif %}
-
-      {% if custom %}
-      {{ custom }}
-      {% endif %}
-
-      {% if issues %}
-      **Closed issues:**
-      {% for issue in issues %}
-      - {{ issue.title }} (#{{ issue.number }})
-      {% endfor %}
-      {% endif %}
-
-      {% if pulls %}
-      **Merged pull requests:**
-      {% for pull in pulls %}
-      - {{ pull.title }} (#{{ pull.number }}) (@{{ pull.author.username }})
-      {% endfor %}
-      {% endif %}
+name: Julia TagBot
+on:
+  issue_comment:
+    types: 
+      - created
+jobs:
+  TagBot:
+    if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: JuliaRegistries/TagBot@v1
+        with:
+          # Owner/name of the registry repository
+          registry: skleinbo/JuliaRegistry.jl
+          lookback: 28
+          # SSH private key for pushing tags
+          ssh: ${{secrets.DOCUMENTER_KEY}}
+          # Changelog template
+          changelog: |
+            This is release {{ version }} of {{ package }}.
+            {% if custom %}
+            Here are my release notes!
+            {{ custom }}
+            {% endif %}
