--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Distributions = "0.25"
 FileIO = "1.8"
 GeometryBasics = "0.3, 0.4"
 Graphs = "1.5"
-Interpolations = "0.13"
+Interpolations = "0.13, 0.14"
 IterTools = "1.3"
 MacroTools = "0.5"
 Rotations = "1.2"
