--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ DataFrames = "1.1"
 Dictionaries = "0.3"
 Distributions = "0.25"
 FileIO = "1.8"
-GeometryBasics = "0.3, 0.4"
+GeometryBasics = "0.4"
 Graphs = "1.5"
 Interpolations = "0.13, 0.14"
 IterTools = "1.3"
