WIP: Use WeightedSampler in eden_with_density!

--- a/Project.toml
+++ b/Project.toml
@@ -20,9 +20,9 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+WeightedSampling = "af319372-f9cb-496b-b431-7c8e6f770e40"
 
 [compat]
-julia = "1.6"
 CoordinateTransformations = "0.6"
 DataFrames = "1.1"
 Dictionaries = "0.3"
@@ -36,3 +36,4 @@ MacroTools = "0.5"
 Rotations = "1.2"
 StaticArrays = "1.1"
 StatsBase = "0.33"
+julia = "1.6"
